PyMaker/datas/object2/RawHTML/i17301/Python_DOC_referPages.python-find-a-specific-word.txt
<div class="post-text" itemprop="text">
<p>I am trying to find if a string matches the word 'for'</p>
<pre><code>str = 'foreign'
re.findall(r'for', str) 
</code></pre>
<p>the above code outputs ['for'], but that's not what i'm looking for.
Perhaps I must use re.match, but I am not sure. 
Any help will be appreciated!</p>
</div>
<div class="post-text" itemprop="text">
<p>Use <code>\b</code> to mark the border of some word:</p>
<pre><code>In [782]: s = 'foreign, for fore'

In [783]: re.findall(r'\bfor\b', s)
Out[783]: ['for']
</code></pre>
<p>From the <a href="http://docs.python.org/3/howto/regex.html#more-metacharacters" rel="nofollow">docs</a>:</p>
<blockquote>
<p>\b is an assertion that the current position is located at a word boundary</p>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>Do you just want to check if the string contains the word or part of it?
the pythonic way to do it is:</p>
<pre><code>In [15]: s = 'foreign, for fore'

In [16]: 'for' in s
Out[16]: True
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You want to get a boolean? How about <code>bool(re.findall(r'for', str))</code>? (By the way, an <code>if</code> statement would do that implicitely, so <code>if re.findall(r'for', str):</code> is ok).</p>
<p>If you don't need to use a regexp, you can also use: <code>'for' in str</code> (which “returns” a boolean).</p>
</div>
<div class="post-text" itemprop="text">
<p>If you insist on using <code>regex</code> to check if a substring is in a string, try:</p>
<pre><code>&gt;&gt;&gt; import re
# If input is a sentence
&gt;&gt;&gt; s = "foreign"
&gt;&gt;&gt; substr = r"for"
&gt;&gt;&gt; [i for i in s.split() if re.findall(substr,i)]
['foreign']

&gt;&gt;&gt; s = "forex is a foreign concept ."
&gt;&gt;&gt; [i for i in s.split() if re.findall(substr,i)]
['forex', 'foreign']

# If input is a list of words
&gt;&gt;&gt; s = ['forex', 'is', 'a', 'foreign', 'concept', '.']
&gt;&gt;&gt; [i for i in s if re.findall(substr,i)]
['forex', 'foreign']
</code></pre>
<p>If you want to check the existence of a substring in a string and return the string:</p>
<pre><code>&gt;&gt;&gt; s = "foreign"
&gt;&gt;&gt; substr = "for"
&gt;&gt;&gt; [i for i in s.split() if substr in s]
['foreign']
</code></pre>
<p>If you want to check the existence of a substring in a string and return a boolean:</p>
<pre><code>&gt;&gt;&gt; s = "foreign"
&gt;&gt;&gt; substr = "for"
&gt;&gt;&gt; substr in s
True
&gt;&gt;&gt; "for" in "foreign"
True
</code></pre>
<p>Of course, trying to ask python in natural language is wont work:</p>
<pre><code>&gt;&gt;&gt; "for" in "foreign"
True
&gt;&gt;&gt; is "for" in "foreign" ?
  File "&lt;stdin&gt;", line 1
    is "for" in "foreign" ?
     ^
SyntaxError: invalid syntax
</code></pre>
</div>
<span class="comment-copy">Are you trying to find if the word <code>for</code> is in a larger text, or if the <i>whole</i> string is equal to <code>for</code>? And why not use <code>str == 'for'</code> if the latter?</span>
<span class="comment-copy">But he says that's not the output he is looking for.</span>
<span class="comment-copy">@JayanthKoushik: it is unclear <i>what</i> the OP is looking for.</span>
<span class="comment-copy">re.findall(r'\bfor\b', s) works perfect! Thank you!</span>
<span class="comment-copy">@Joseph so what are you looking for exactly?</span>
<span class="comment-copy">@JayanthKoushik well, my guess is correct now ;P</span>
<span class="comment-copy">That'd also be true for <code>'This is all foreign to me'</code> but may be incorrect too..</span>
<span class="comment-copy">that's something he's unclear about does he wants to make sure the entire word as a word is contained in the sentence or not.</span>
<span class="comment-copy">wow, thank you!</span>
